--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -43,6 +43,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Infinite scroll
 # Media
 	## Galleries
+# Custom
 --------------------------------------------------------------*/
 @import "variables/variables-base";
 @import "mixins/mixins-base";
@@ -131,3 +132,8 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Media
 --------------------------------------------------------------*/
 @import "shared/media";
+
+/*--------------------------------------------------------------
+# Custom
+--------------------------------------------------------------*/
+@import "custom"
