--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -46,6 +46,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 # Custom
 --------------------------------------------------------------*/
 @import "variables/variables-base";
+@import "variables/variables-custom";
 @import "mixins/mixins-base";
 
 /*--------------------------------------------------------------
