--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -48,6 +48,7 @@ Nicolas Gallagher and Jonathan Neal http://necolas.github.com/normalize.css/
 @import "variables/variables-base";
 @import "variables/variables-custom";
 @import "mixins/mixins-base";
+@import "font-awesome/font-awesome";
 
 /*--------------------------------------------------------------
 # Normalize
