--- a/assets/stylesheets/_custom.scss
+++ b/assets/stylesheets/_custom.scss
@@ -1,26 +1,132 @@
-// Media queries
+@import 'https://fonts.googleapis.com/css?family=Roboto:300';
+
 body{
   background-color:$tertiary-color;
+  font-family: 'Roboto', sans-serif;
+
 }
 
 //layout
 .content-area{
   background-color:$secondary-color;
+  margin:0;
+  width:75%;
+  .site-main{
+    margin:10px;
+  }
 }
 .widget-area{
-  background-color: $primary-color;
-  min-height:100%;
-  margin:0;
-  position: fixed;
-  background-color: $primary-color;
-  top: 0;
-  bottom: 0;
+  }
+article:first-child{
+  margin-top:1rem;
 }
+#profile-image img {
+  width: 150px;
+  height: 150px;
+  border-radius: 75px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+.card {
+  font-family: 'Roboto', sans-serif;
+  background-color: white;
+  overflow: hidden;
+  box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+  color: black;
+  border-radius: 2px;
+  margin-bottom: 1rem;
+  .entry-title {
+    line-height: 3rem;
+    font-size: 1.5rem;
+    font-weight: 300;
+    margin-left: 1rem;
+  }
+  .entry-meta{
+    display:none;
+  }
+  .content {
+    padding: 1.3rem;
+    font-weight: 300;
+    border-radius: 0 0 2px 2px;
+  }
+  .entry-footer{
+    display: none;
+  }
+  h1{
+    color: $secondary-color;
+  }
+  h2, h3, pre {
+    margin: 1rem;
+  }
+  p {
+  margin: 1rem;
+  }
+
+  a {
+    color: $secondary-color;
+    text-decoration: none;
+  }
+}
+
+.widget-area {
+    background-color: $primary-color;
+    margin:0;
+    position: fixed;
+    top: 0;
+    bottom: 0;
+    h1 {
+      font-family: 'Roboto', sans-serif;
+      color: #fff;
+      text-transform: uppercase;
+      font-weight: 100;
+    }
+
+
+}
+  .social-icons ul {
+    @include center-menu;
+    display: inline-block;
+
+    li {
+      padding:0px 5px;
+      float:left;
+      list-style: none;
+    }
+  }
+  a .fa{
+    color:white;
+  }
+
+  .middle-header {
+    text-align: center;
+    margin-top:50px;
+  }
+  .post-navigation{
+    a {
+      color: white;
+      text-decoration: none;
+    }
+  }
+
 
 @media screen and (max-width: #{$breakpoint_tablet}) {
   .widget-area{
     height:50vh;
     overflow-y:hidden;
     position:static;
+    .middle-header{
+      margin-top:10px;
+      h1{
+        margin:0.2rem 0;
+      }
+    }
+  }
+  .content-area{
+    width:100%;
+    .site-main{
+      margin:10px;
+    }
   }
 }
